--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,66 +1,23 @@
 .navBar {
+    /* border: 2px solid yellow; */
     width: 100%;
-    height: 8vh;
+    height: 5vh;
     background: rgb(0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
-    position:relative;
-    top: 0;
-    z-index: 1000;
-  }
-  
-  .navBar form {
-    height: 100%;
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .navBar form input {
-      margin: 0;
-      padding: 2%;
-      height: 15%;
-      width: 40%;
-      border: none;
-      outline: none;
-  }
-  
-  .navBar form a {
-    width: 7.5%;
-    height: 35.3%;
-    margin: 0;
-    padding: 0;
-    background: #C5C3D6;
-    outline: none;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .navBar form a button {
-    width: 80%;
-    height: 80%;
-    background-color: transparent;
-    color: #b34646;
-    border: none;
-  }
+}
 
-  .navBar form a button:hover {
-    cursor: pointer;
-  }
+.navBar div {
+  width: 20%;
+  height: 90%;
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .navBar .home {
-    width: 20%;
-    height: 100%;
-    margin-left: 2%;
-    margin-top: 0%;
-    display: inline-block;
-  }
-  
-  .navBar .home a {
+.navBar h3 {
     text-decoration: none;
     width: 55%;
     height: 80%;
@@ -68,52 +25,33 @@
     font-family: "Lato", sans-serif;
     align-items: center;
     justify-content: flex-start;
-  }
-  
-  .navBar .home a h2:hover {
-    color:  #DCDAF0;
-  }
-  
-  .navBar .about {
-    width: 20%;
-    height: 100%;
-    margin-left: 2%;
-    margin-top: 0%;
-    display: inline-block;
-  }
-  
-  .navBar .about a {
-    text-decoration: none;
-    width: 55%;
-    height: 80%;
-    align-items: center;
-    color:rgba(255, 255, 255, 255);
-    font-family: "Lato", sans-serif;
-    justify-content: flex-start;
-  }
-  
-  .navBar .about a h2:hover {
-    color:#DCDAF0;
-  }
+}
 
-  .navBar .create {
-    width: 20%;
-    height: 100%;
-    margin-left: 2%;
-    margin-top: 0%;
-    display: inline-block;
-  }
-  
-  .navBar .create a {
-    text-decoration: none;
-    width: 55%;
-    height: 80%;
-    align-items: center;
-    color:rgba(255, 255, 255, 255);
-    font-family: "Lato", sans-serif;
-    justify-content: flex-start;
-  }
-  
-  .navBar .create a h2:hover {
-    color:#DCDAF0;
-  }
+.searchbar {
+  display: flex;	
+  flex-direction: col;
+}
+
+.searchbar input {
+  height: 90%;
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+  border-radius: 5px 0px 0px 5px;
+  border: 1px solid white;
+}
+
+.searchbar form button {
+  height: 90%;
+  border-radius: 0px 5px 5px 0px;
+  border: 1px solid white;
+  background-color: white;
+}
+
+.searchbar input:hover {
+  cursor: pointer;
+}
+
+.searchbar form button:hover {
+  cursor: pointer;
+  text-shadow:  0 5px #fff0;
+}
