--- a/client/src/containers/GameDetail/GameDetail.css
+++ b/client/src/containers/GameDetail/GameDetail.css
@@ -2,23 +2,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     padding-top: 130px;
+}
+
+.info{
+    display: flex;
+    flex-direction: row;
 }
 
 .image {
     width: 50%;
     height: 90%;
     margin-left: 150px;
-    
-    
-
 }
 
 .image img {
     width: 80%;
 }
-
-
 
 .details {
     width: 50%;
@@ -28,61 +29,17 @@
     margin-bottom: 120px;
 }
 
-.detailsContainer .details {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
-
-
-
-.detailsContainer p {
-    font-size: 15px;
-    font-weight: 500;
-}
-
-.detailsContainer .rating {
-    display: flex-start;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.detailsContainer .released {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-}
-
-.detailsContainer .Genress .genre {
-    display:grid;
-    align-items: center;
-    justify-content: center;
-}
-
-.detailsContainer .Platforms .platforms {
-    display:grid;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-
-.detailsContainer .details .text {
-    width: 90%;
-    height: 90%;
-}
-
-.detailsContainer h1 {
-    font-size: 30px;
-    font-weight: 600;
-    color: #6C6B75;
-}
-
-.detailsContainer h2 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #6C6B75;
-}
+.button {
+    font-family: 'Poppins', sans-serif;
+      color: white;
+      font-size: 120%;
+      border: solid 1px white;
+      border-radius:20px;
+      background:none;
+  }
+  
+  .button:hover {
+      cursor: pointer;
+      font-size: 125%;
+      text-shadow: 0 0 5px #fff,
+  };
