--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -7,6 +7,12 @@
     flex-direction: column;
 }
 
+.divForm2{
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: row;
+}
+
 .title{
     border: 3px solid blue;
 }
@@ -14,7 +20,7 @@
 .form{
     border: 3px solid red ;
     height: 550px;
-    width: 600px;
+    width: 700px;
 }
 
 .checkboxs{
@@ -22,7 +28,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 600px;
+    align-items: center;
+    width: 700px;
 
 }
 
@@ -58,6 +65,7 @@
 
 .platt{
     border: 3px solid green ;
+    
 }
 
 .platt ul{
