--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
 
 .card{
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.15);
     width: 19%;
     height: 200px;
     margin-top: 5px;
