--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -20,13 +20,9 @@
     margin-bottom: 70px;
 }
 
-.divForm2{
+.divTitles{
     display: flex;
     flex-direction: row;
-}
-
-.text-label{
-    
 }
 
 .label{
@@ -37,36 +33,41 @@
     margin: 5px;
 }
 
-.title{
-    
-}
-
-
-
 .checkboxs{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 650px;
 
 }
 
+.checks{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
 
-
-.genn ul{
+.checks ul{
     display: flex;
     flex-direction: column;
     justify-content: flex-start ;
     font-size: 15px;
 }
 
-.platt{
-    
+.button2 {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-size: 120%;
+    border: solid 1px white;
+    border-radius:20px;
+    background:none;
 }
 
-.platt ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start ;
-} 
+.button2:hover {
+    cursor: pointer;
+    font-size: 125%;
+    text-shadow: 0 0 5px #fff,
+};
