--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
 .about{
+    font-family: 'Poppins', sans-serif;
     width: 99%;
     height: 94vh;
     display: flex;
@@ -6,5 +9,24 @@
     align-items: center;
     flex-direction: column
     
+}
+
+.about h1{
+    font-size: 40px;
+}
+
+
+
+.logos{
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.img{
+    height: 6vh;
+}
+.img1{
+    height: 8vh;
 }
 
