--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
 
 .card{
+    border: 1px solid rgba(255, 255, 255, 0.489);
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: rgba(255, 255, 255, 0.09);
+    box-shadow: 2px 2px 40px rgba(0, 0, 0, 0.313);
     width: 19%;
     height: 200px;
     margin-top: 5px;
@@ -12,6 +14,18 @@
     flex-direction: column;
 }
 
+
+.gral{
+    border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+}
+.texxt{
+    border: 1px solid red;
+}
+
+
 .name{
     font-family: 'RocknRoll One', sans-serif;
 }
@@ -19,5 +33,10 @@
 .card img{
     width: 250px;
     height: 140px;
+}
+
+.genres{
+    
+    font-family: 'Poppins', sans-serif;
 }
 
